axiom graph handle && code cleanup